loading memes from folder without hard coding the names. made the tag output scrollable and a better filling layout but still the stretch needs fixing.

--- a/mycss/mainlayout.css
+++ b/mycss/mainlayout.css
@@ -28,13 +28,11 @@ body {
   border-top: 5px solid red;
 }
 
-
-
 .pic-container {
   width: 100%;
   height: 75%;
   overflow-y: scroll;
-  overflow-x:hidden;
+  overflow-x: hidden;
 }
 
 .center {
@@ -47,14 +45,19 @@ body {
   width: 20%;
   border: 2px solid blue;
 }
-.rightupper {
-  height: 50vh;
-  width: 100%;
-  background-color: rgb(190, 190, 190);
+#descriptionInput {
+  height: 30vh;
 }
 .rightlower {
-  height: 50vh;
   width: 100%;
+  height: 75vh;
   background-color: rgb(190, 190, 190);
   border-top: 5px solid blue;
+}
+
+/*max-height: 35vh; */
+#taglist {
+  overflow-y: auto;
+  max-height: 50vh;
+  display: block;
 }
